@@ -1,3 +1,7 @@
+2018-12-30  Daniel Hawkins
+    * server/player.c: Simplify melee weapon pickup logic, since tables and chairs
+      haven't been weapons since 2011.
+
 2018-12-24  Daniel Hawkins
     * server/c_object.c: Fix "gods...retrieves" to agree in plurality.
     * plugins/cfcitybell/*: Refactor city temple bell event to be its own non-Python unit.
